--- a/php/application/views/pages/home.html
+++ b/php/application/views/pages/home.html
@@ -5,7 +5,7 @@
     <title> Welcome to Gardenshift</title>
     <style type="text/css">
         body {  font-family:Arial, Helvetica, Sans-Serif; font-size:12px; margin:0px 20px;
-		background-image: url("../views/pages/simple.jpg");	  	
+		background-image: url("../../images/simple.jpg");	  	
 	 	background-repeat: no-repeat;		
 		background-size: 100% 110%;
             	min-height: 700px;
