--- a/php/css/userpage.css
+++ b/php/css/userpage.css
@@ -80,7 +80,7 @@ hr {
 /* Page */
 
 #page {
-	width: 700px;
+	width: 80%;
 	margin: 0 auto;
 }
 
@@ -177,7 +177,7 @@ hr {
 
 #statusDiv {
 	float: left;
-	width: 750px;
+	width: 100%;
 	padding-top: 10px;
         
 }
